--- a/requirements.txt
+++ b/requirements.txt
@@ -15,10 +15,8 @@ Jinja2==2.9.5
 Mako==1.0.6
 MarkupSafe==0.23
 MySQL-python==1.2.5
-packaging==16.8
-pyparsing==2.1.10
 python-editor==1.0.3
-six==1.10.0
+rope==0.11.0
 SQLAlchemy==1.1.5
 visitor==0.1.3
 Werkzeug==0.11.15
